# Bot_videoEditor

./: .gitignore  README.md  build_exe.bat  build_installer.bat  install_dependencies.bat  pyproject.toml  requirements.txt  run_app.bat  run_project.bat
installer/: VideoEditor.iss
src/video_editor_bot/: __init__.py  bot.py  config.py  gui.py  main.py  storage.py
src/video_editor_bot/services/: __init__.py  asr.py  jobs.py  video_processor.py
tests/: test_asr.py  test_bot.py  test_config.py  test_jobs.py  test_main.py  test_video_processor.py
