[project]
name = "bot-video-editor"
version = "0.1.0"
description = "Telegram bot that turns regular clips into vertical videos with blurred background and optional subtitles."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "0xgavrs" }]
dependencies = [
  "faster-whisper>=1.0,<2.0",
  "imageio-ffmpeg>=0.5,<1.0",
  "python-telegram-bot>=21.0,<22.0",
]

[project.optional-dependencies]
asr = ["faster-whisper>=1.0,<2.0"]
dev = ["pytest>=8.0,<9.0"]

[project.scripts]
video-editor-bot = "video_editor_bot.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
