[project]
name = "bot-video-editor"
version = "0.1.0"
description = "Desktop video editor for preparing vertical short-form clips with subtitles and overlays."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "0xgavrs" }]
dependencies = [
  "faster-whisper>=1.0,<2.0",
  "imageio-ffmpeg>=0.5,<1.0",
  "PySide6>=6.7,<7.0",
]

[project.optional-dependencies]
asr = ["faster-whisper>=1.0,<2.0"]
dev = ["pytest>=8.0,<9.0"]

[project.scripts]
video-editor = "video_editor_bot.gui:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
